--- a/docker/llm/Dockerfile
+++ b/docker/llm/Dockerfile
@@ -4,9 +4,9 @@ FROM nvidia/cuda:12.4.1-cudnn-devel-ubuntu20.04
 # Suppress interactive prompts
 ENV DEBIAN_FRONTEND=noninteractive
 
-# Install system packages (including curl and ca-certificates)
+# Install system packages (including curl, ca-certificates, and ssh-keygen)
 RUN apt-get update && \
-    apt-get install -y python3 python3-pip git curl ca-certificates && \
+    apt-get install -y python3 python3-pip git curl ca-certificates openssh-client && \
     rm -rf /var/lib/apt/lists/*
 
 # Install PyTorch + Transformers (for example)
@@ -14,6 +14,10 @@ RUN pip3 install --no-cache-dir torch torchvision torchaudio transformers
 
 # Install Ollama
 RUN curl -fsSL https://ollama.com/install.sh | sh
+
+# Pre-generate an Ed25519 SSH key for Ollama
+RUN mkdir -p /root/.ollama && \
+    ssh-keygen -t ed25519 -N "" -f /root/.ollama/id_ed25519
 
 # Copy your LLM scripts into the container (if you have them locally)
 WORKDIR /app
