--- a/docker/llm/Dockerfile
+++ b/docker/llm/Dockerfile
@@ -24,4 +24,4 @@ WORKDIR /app
 COPY . /app
 
 # By default, start the Ollama server
-CMD ["ollama", "serve"]
+CMD ["ollama", "serve", "--host=0.0.0.0:11434"]
