--- a/docker/llm/Dockerfile
+++ b/docker/llm/Dockerfile
@@ -25,4 +25,4 @@ WORKDIR /app
 COPY . /app
 
 # By default, start the Ollama server
-CMD ["ollama", "serve", "--host=0.0.0.0:11434"]
+CMD ["ollama", "serve"]
