--- a/yaml/docker-compose.yaml
+++ b/yaml/docker-compose.yaml
@@ -1,19 +1,22 @@
-name: 'supreme_machine'
+version: "3.9"
+
 services:
   llm:
-    image: 'huggingface/transformers-pytorch-gpu:latest'
+    image: "my-ollama-llm"
+    # This maps /home/lrocha/data/ollama_data on your host to /root/.ollama inside the container
     volumes:
-      - ./models:/app/models
-      - ./logs:/app/logs
-    environment:
-      - MODEL_PATH=/app/models
+      - /home/lrocha/data/ollama_data:/root/.ollama
+    # Publishes port 11434 so you can reach Ollama from outside the container
     ports:
-      - "0.0.0.0:8000:8000"
+      - "11434:11434"
+    # GPU reservations (applies mainly in Docker Swarm, ignored in plain Compose)
     deploy:
       resources:
         reservations:
           devices:
-            - driver: 'nvidia'
-              count: 'all'
+            - driver: "nvidia"
+              count: all
               capabilities:
                 - "gpu"
+    # Uncomment if you want the container to restart automatically.
+    # restart: "unless-stopped"
